# chest_x-ray_classification

./: .gitignore  LICENSE  README.md  ch01_resnet152_finetune.ipynb  ch02_resnet50_train.ipynb  ch03_vit_finetune.ipynb  pyproject.toml
data/: README.md
